--- a/17.1 prompt_III_PS.ipynb
+++ b/17.1 prompt_III_PS.ipynb
@@ -578,6 +578,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "#LG\n",
+    "\n",
+    "lg_model = LogisticRegression()\n",
+    "lg_model.fit(xl_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -652,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 100% False Negative. This model also can't predict when someone will respond positively so again it is useless."
+    "# 100% False Negative. This model also can't predict when someone will respond positively. Again, not useful."
    ]
   },
   {
